1. username fix 2. panel width increased 3. font size changed to pixel and optimum 4. nav bar spacing increased

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,19 +4,19 @@ html, body {
 
 body {
     padding-top: 49px;
-    font-size: 11pt;
+    font-size: 13px;
 }
 
 .navbar-inverse .navbar-nav > li > a {
     padding:3px;
-    margin:10px;
+    margin:10px 15px;
     font-size:14px;
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-hover li:hover > a {
     border-bottom:2px solid #54aee0;
     padding:2px 3px;
-    margin:10px;
+    /*margin:10px;*/
 }
 
 .breadcrumb {
@@ -37,7 +37,7 @@ body {
 
 .projectnav > li {
     padding: 12px 10px;
-    font-size: 11pt;
+    font-size: 14px;
 }
 
 .projectnav > li {
@@ -97,11 +97,11 @@ body {
     background:#ebebeb;
     height:54px;
     padding:5px;
-    font-size: 11pt;
+    font-size: 13px;
 }
 
 .panel-title {
-    font-size:12pt;
+    font-size:15px;
     color:#3c3c3c;
     margin-bottom:5px;
 }
